RESOLVED FIXED40158
ASSERTION FAILED with -webkit-appearance:progress-bar for non-progress bar elements
https://bugs.webkit.org/show_bug.cgi?id=40158
Summary ASSERTION FAILED with -webkit-appearance:progress-bar for non-progress bar el...
Hajime Morrita
Reported 2010-06-03 23:31:38 PDT
Created attachment 57847 [details] reproduce ASSERTION FAILED occurs when "-webkit-appearance:progress-bar" is given for non-progress element like <input style="-webkit-appearance: progress-bar;" />. <meter> should have same problem, but it is not enabled yet.
Attachments
reproduce (127 bytes, text/html)
2010-06-03 23:31 PDT, Hajime Morrita
no flags
patch v0 (16.05 KB, patch)
2010-06-04 01:34 PDT, Hajime Morrita
no flags
patch v1; attempt to chromium build fix (16.05 KB, patch)
2010-06-04 02:01 PDT, Hajime Morrita
no flags
patch v2 (7.88 KB, patch)
2010-06-04 03:09 PDT, Hajime Morrita
no flags
patch v3; rebased (8.22 KB, patch)
2010-06-04 03:30 PDT, Hajime Morrita
no flags
patch v4 (8.22 KB, patch)
2010-06-06 19:07 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2010-06-04 01:34:34 PDT
Created attachment 57851 [details] patch v0
Early Warning System Bot
Comment 2 2010-06-04 01:41:45 PDT
WebKit Review Bot
Comment 3 2010-06-04 01:46:42 PDT
Hajime Morrita
Comment 4 2010-06-04 02:01:33 PDT
Created attachment 57855 [details] patch v1; attempt to chromium build fix
Hajime Morrita
Comment 5 2010-06-04 02:02:59 PDT
Comment on attachment 57855 [details] patch v1; attempt to chromium build fix I missed Qt build fix. canceling.
Hajime Morrita
Comment 6 2010-06-04 02:04:25 PDT
Comment on attachment 57855 [details] patch v1; attempt to chromium build fix Oops. Qt build failure has same cause as Chromium's one. re-enable this patch...
WebKit Review Bot
Comment 7 2010-06-04 02:13:57 PDT
Kent Tamura
Comment 8 2010-06-04 02:32:20 PDT
Comment on attachment 57855 [details] patch v1; attempt to chromium build fix LayoutTests/fast/css/script-tests/invalid-appearance-progress-bar-meter.js:3 + var body = document.getElementsByTagName("body")[0]; document.body is simpler. WebCore/rendering/RenderTheme.cpp:47 + #import "RenderProgress.h" Why #import instead of #include ? WebCore/rendering/RenderTheme.h:245 + virtual bool paintMeter(RenderMeter*, const RenderObject::PaintInfo&, const IntRect&); For consistency with other paint*() member functions, I prefer not changing the parameter types, and check isMeter() and isProgress() in their paint*() functions.
Hajime Morrita
Comment 9 2010-06-04 03:09:07 PDT
Created attachment 57859 [details] patch v2
WebKit Review Bot
Comment 10 2010-06-04 03:11:56 PDT
Attachment 57859 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/rendering/RenderThemeChromiumSkia.cpp:805: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Hajime Morrita
Comment 11 2010-06-04 03:30:56 PDT
Created attachment 57862 [details] patch v3; rebased
Hajime Morrita
Comment 12 2010-06-04 03:33:23 PDT
Hi Kent-san, Thank you for your quick review! > (From update of attachment 57855 [details]) > LayoutTests/fast/css/script-tests/invalid-appearance-progress-bar-meter.js:3 > + var body = document.getElementsByTagName("body")[0]; > document.body is simpler. Done. > > > WebCore/rendering/RenderTheme.cpp:47 > + #import "RenderProgress.h" > Why #import instead of #include ? Just copied from .mm file and didn't noticed. I'm sorry for confusion. > WebCore/rendering/RenderTheme.h:245 > + virtual bool paintMeter(RenderMeter*, const RenderObject::PaintInfo&, const IntRect&); > For consistency with other paint*() member functions, I prefer not changing the parameter types, and check isMeter() and isProgress() in their paint*() functions. Done.
WebKit Review Bot
Comment 13 2010-06-04 03:54:05 PDT
Kent Tamura
Comment 14 2010-06-04 04:29:14 PDT
Comment on attachment 57862 [details] patch v3; rebased WebCore/platform/qt/RenderThemeQt.cpp:731 + return false; paint*() function should return true if it doesn't paint something.
Hajime Morrita
Comment 15 2010-06-06 19:07:51 PDT
Created attachment 57988 [details] patch v4
Hajime Morrita
Comment 16 2010-06-06 19:09:00 PDT
Thank you for reviewing! > WebCore/platform/qt/RenderThemeQt.cpp:731 > + return false; > paint*() function should return true if it doesn't paint something. Fixed to return true. I also fixed other similar parts as well.
Kent Tamura
Comment 17 2010-06-06 19:22:58 PDT
Comment on attachment 57988 [details] patch v4 OK
Hajime Morrita
Comment 18 2010-06-06 20:08:39 PDT
WebKit Review Bot
Comment 19 2010-06-06 20:22:32 PDT
http://trac.webkit.org/changeset/60767 might have broken Chromium Win Release
Hajime Morrita
Comment 20 2010-09-08 20:48:49 PDT
Comment on attachment 57988 [details] patch v4 clearing r+
Note You need to log in before you can comment on or make changes to this bug.