2010-06-06  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        ASSERTION FAILED with -webkit-appearance:progress-bar for non-progress bar elements
        https://bugs.webkit.org/show_bug.cgi?id=40158

        * fast/css/invalid-appearance-progress-bar-meter-expected.txt: Added.
        * fast/css/invalid-appearance-progress-bar-meter.html: Added.
        * fast/css/script-tests/invalid-appearance-progress-bar-meter.js: Added.
2010-06-06  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        ASSERTION FAILED with -webkit-appearance:progress-bar for non <progress> elements
        https://bugs.webkit.org/show_bug.cgi?id=40158

        paintProgressBar() and paintMeter() assumed given RenderObject is
        RenderProgress or RenderMeter respectively, but arbitrary elements
        can have -webkit-appearance: progress-bar and such elements
        violates that assumption. So this change added type check before
        downcasting the RenderObject.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintProgressBar):
        * rendering/RenderTheme.cpp:
        (WebCore::RenderTheme::paintMeter):
        * rendering/RenderThemeChromiumSkia.cpp:
        (WebCore::RenderThemeChromiumSkia::paintProgressBar):
        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::paintProgressBar):
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::paintProgressBar):

Canonical link: https://commits.webkit.org/51790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60767 268f45cc-cd09-0410-ab3c-d52691b4dbfc