WebCore/rendering/RenderTheme.cpp
@@ -895,6 +895,9 @@ void RenderTheme::adjustMeterStyle(CSSStyleSelector*, RenderStyle* style, Elemen
 
 bool RenderTheme::paintMeter(RenderObject* renderObject, const RenderObject::PaintInfo& paintInfo, const IntRect& rect)
 {
+    if (!renderObject->isMeter())
+        return true;
+
     // Some platforms do not have a native gauge widget, so we draw here a default implementation.
     RenderMeter* renderMeter = toRenderMeter(renderObject);
     RenderStyle* style = renderObject->style();
